# xdm

./: .cvsignore  .gitignore  COPYING  ChangeLog  Chooser.ad  Makefile.am  README  access.c  auth.c  autogen.sh  choose.c  chooser.c  configure.ac  cpprules.in  daemon.c  dm.c  dm.h  dm_auth.h  dm_error.h  dm_socket.h  dpylist.c  error.c  file.c  genauth.c  greet.h  krb5auth.c  mitauth.c  netaddr.c  policy.c  prngc.c  protodpy.c  rebuild.sh  reset.c  resource.c  rpcauth.c  server.c  session.c  socket.c  streams.c  util.c  (+4 more)
app-defaults/: .gitignore
chooser/: .gitignore  Makefile.am  chooser.c
config/: .gitignore  GiveConsole  Makefile.am  Xaccess  Xresources.cpp  Xservers.ws.cpp  Xservers.ws.in  Xsession.cpp  Xsession.in  greeter  xdm-config.cpp  xorg-bw.xpm  xorg.xpm
greeter/: .gitignore  Login.c  Login.h  LoginP.h  Makefile.am  greet.c  verify.c
include/: dm.h  dm_socket.h  greet.h
man/: xdm.man
xdm/: Makefile.am  access.c  auth.c  choose.c  dm.c  dpylist.c  error.c  file.c  genauth.c  krb5auth.c  mitauth.c  netaddr.c  policy.c  prngc.c  protodpy.c  reset.c  resource.c  rpcauth.c  server.c  session.c  socket.c  util.c  xdmauth.c  xdmcp.c
xdmshell/: .gitignore  Makefile.am
